module3_assignment/deploy_a2/gowebapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gowebapp
  labels:
    run: gowebapp
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  ports:
  - port: 9000
    targetPort: 80
  selector:
    run: gowebapp
  type: NodePort
